config/k8s/demo-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-mongo
  template:
    metadata:
      labels:
        app: demo-mongo
    spec:
      containers:
        - name: demo-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: demo-mongo-clusterip
spec:
  selector:
    app: demo-mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
