config/k8s/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: shaharyar07/front-end
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-clusterip
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
