config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo-app.dev
      http:
        paths:
          - path: /api/demo/get
            pathType: Prefix
            backend:
              service:
                name: demo-clusterip
                port:
                  number: 5000
